[CSS Blending] The composited layers isolated by the page group should blend with the default white background color. https://bugs.webkit.org/show_bug.cgi?id=136563

Reviewed by Simon Fraser.

Source/WebCore:

If a blending layer is not isolated, then it should blend with a white backdrop:
http://dev.w3.org/fxtf/compositing-1/#pagebackdrop

Tests: css3/blending/blend-mode-body-composited-child-background-color.html
       css3/blending/blend-mode-body-composited-child.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::isSimpleContainerCompositingLayer):
If the isolating composited layer is the root renderer, then it should have a backing store
into which the initial white backdrop will be painted.

LayoutTests:

* css3/blending/blend-mode-blended-element-overlapping-composited-sibling-should-have-compositing-layer-expected.txt:
* css3/blending/blend-mode-body-composited-child-background-color-expected.html: Added.
* css3/blending/blend-mode-body-composited-child-background-color.html: Added.
* css3/blending/blend-mode-body-composited-child-expected.html: Added.
* css3/blending/blend-mode-body-composited-child.html: Added.
* css3/blending/blend-mode-parent-of-composited-blended-has-layer-expected.txt:
* css3/blending/blend-mode-with-composited-descendant-should-have-layer-expected.txt:


Canonical link: https://commits.webkit.org/154842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173867 268f45cc-cd09-0410-ab3c-d52691b4dbfc